Final - Melhorias de performance, indentacao e documentacao